# pogodik

./: README.md  pyproject.toml
pogodik/: .cache.sqlite  manage.py
pogodik/pogodik/: asgi.py  settings.py  wsgi.py
pogodik/templates/: base.html
pogodik/templates/includes/: footer.html  header.html
pogodik/templates/weather/: showing_weather.html
pogodik/weather/: forms.py  urls.py  utils.py  views.py
